--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
 Flask==2.3.2
 python-dotenv==1.0.0   # For managing environment variables
 SQLAlchemy==2.0.21     # For ORM database operations
+pymysql==1.1.1
+cryptography==39.0.1
