--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.2
+Flask==2.3.0
 python-dotenv==1.0.0   # For managing environment variables
 SQLAlchemy==2.0.21     # For ORM database operations
 pymysql==1.1.1
 cryptography==39.0.1
+PyJWT==2.0
+Flask-JWT-Extended==4.6.0
